Fixed overflow bug

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,8 @@ main {
 
 .overview {
     position: absolute;
+    max-height: 100%;
+    overflow: auto;
     left: 0;
     bottom: 0;
     right: 0;
